Rename modules and adapt .cabal-File. Remove data Date. Add output message for search query without matching results.

--- a/CurrySearch.cabal
+++ b/CurrySearch.cabal
@@ -21,7 +21,7 @@ executable curryIndexer
 
   hs-source-dirs: src
   
-  other-modules: IndexTypesC
+  other-modules: IndexTypes
                , CurryInfo
 
   build-depends: ghc                    >= 7
