Add functionality to update the existing index with new data (--u) or to create a new index with the given data (--n). Add arguments for curryIndexer (uri path, directory path and options).

--- a/CurrySearch.cabal
+++ b/CurrySearch.cabal
@@ -74,6 +74,7 @@ executable curryServer
                , base                       >= 4     && < 5
                , binary                     >= 0.5
                , bytestring                 >= 0.9.1 && < 0.10
+               , directory
                , filepath                   == 1.2.0.*
                , heist                      >= 0.5   && < 0.6
                , Holumbus-Searchengine      >= 1.2
