--- a/CurrySearch/Currygle.cabal
+++ b/CurrySearch/Currygle.cabal
@@ -1,18 +1,16 @@
-name:          CurrySearch
+name:          Currygle
 version:       0.1
-license:       MIT
+-- license:       MIT
 -- license-file:  LICENSE
-author:        Sandra Dtlus
---copyright:     Copyright (c) 2011-12 Thorben Gülck, Mathias Leonhardt, Tobias Lüders, Uwe Schmidt
---maintainer:    Uwe Schmidt <uwe@fh-wedel.de>
+author:        Sandra Dylus
 stability:     experimental
 category:      Text, Data
-synopsis:      CurrySearch
+synopsis:      Curr(y)gle
 homepage:      tba
-description:   CurrySearch - search modules, function and types
+description:   Curr(y)gle - An API search engine for Curry
 cabal-version: >=1.6
 build-type:    Simple
--- tested-with:   ghc-7.0.3
+tested-with:   GHC==7.0.4
 
 -- ------------------------------------------------------------
 
@@ -32,14 +30,6 @@ executable curryIndexer
                , bzlib                  >= 0.4  && < 1
                , filepath               >= 1    && < 2
                , haskell98              >= 1    && < 2
-               -- , hxt                    >= 9.1  && < 10
-               -- , hxt-cache              >= 9    && < 10
-               -- , hxt-charproperties     >= 9    && < 10
-               -- , hxt-curl               >= 9    && < 10
-               -- , hxt-http               >= 9    && < 10
-               -- , hxt-regex-xmlschema    >= 9    && < 10
-               -- , hxt-xpath              >= 9.1  && < 10
-               -- , network                >= 2.1  && < 3
                , parsec                 >= 2.1  && < 4
                , process                >= 1    && < 2
                , tar                    >= 0.3  && < 1
