Modify Makefile. Make it easier to understand which directories to modify for own usage.

--- a/cdoc/Makefile
+++ b/cdoc/Makefile
@@ -3,6 +3,8 @@
 # Required:
 # - installed curry2prolog system
 
+# the following paths must link to the directory of your Curry implementation.
+# the library directories META, LIB and the analysis tool
 CURRY=/Users/ichistmeinname/Downloads/pakcs
 LIB=${CURRY}/lib
 META=${LIB}/meta
@@ -21,7 +23,9 @@ CurryDoc.state: CurryDoc.curry CurryDocRead.curry CurryDocHtml.curry \
 	        ${ANADIR}/AnaDependency.curry
 	(echo ":set path ${ANADIR}" ; echo ":l CurryDoc" ; echo ":set path" ; \
 	 echo ":save main" ) | /Users/ichistmeinname/Downloads/pakcs/bin/pakcs
+# the path above must link to your curry implementation 
 	(cd /Users/ichistmeinname/Dropbox/Uni/6/Bachelorarbeit/2012-sad-ba/cdoc ; \
+# the path above must link to the current director 
 	 rm -f currydoc ; \
 		ln -s ./CurryDoc.state currydoc)
 
