--- a/cdoc/Makefile
+++ b/cdoc/Makefile
@@ -11,6 +11,8 @@ META=${LIB}/meta
 ANADIR=/Users/ichistmeinname/Downloads/pakcs/tools/analysis
 
 # generate saved state for currydoc program:
+# the path after the pipe "|" must link to your curry implementation 
+# after than, you change to the directory of this file 
 CurryDoc.state: CurryDoc.curry CurryDocRead.curry CurryDocHtml.curry \
 	        CurryDocTeX.curry CurryDocParams.curry CurryDocCDoc.curry\
 	        ${LIB}/Markdown.curry \
@@ -23,9 +25,7 @@ CurryDoc.state: CurryDoc.curry CurryDocRead.curry CurryDocHtml.curry \
 	        ${ANADIR}/AnaDependency.curry
 	(echo ":set path ${ANADIR}" ; echo ":l CurryDoc" ; echo ":set path" ; \
 	 echo ":save main" ) | /Users/ichistmeinname/Downloads/pakcs/bin/pakcs
-# the path above must link to your curry implementation 
 	(cd /Users/ichistmeinname/Dropbox/Uni/6/Bachelorarbeit/2012-sad-ba/cdoc ; \
-# the path above must link to the current directory
 	 rm -f currydoc ; \
 		ln -s ./CurryDoc.state currydoc)
 
