--- a/Currygle.cabal
+++ b/Currygle.cabal
@@ -12,94 +12,50 @@ cabal-version: >=1.6
 build-type:    Simple
 tested-with:   GHC==7.0.4
 
--- ------------------------------------------------------------
-
 executable curryIndexer
-  main-is: curryIndexer.hs
-
+  main-is:        CurryIndexer.hs
   hs-source-dirs: src
-  
-  other-modules: IndexTypes
-               , CurryInfo
+  other-modules:  CurryInfo, FilesAndLoading, Helpers, IndexTypes
 
-  build-depends: ghc                    >= 7
-               , base                   >= 4    && < 5
-               , Holumbus-Searchengine  >= 1.2.2  && < 2
-               , binary                 >= 0.5  && < 1
-               , bytestring             >= 0.9  && < 1
-               , bzlib                  >= 0.4  && < 1
-               , filepath               >= 1    && < 2
-               , haskell98              >= 1    && < 2
-               , parsec                 >= 2.1  && < 4
-               , process                >= 1    && < 2
-               , tar                    >= 0.3  && < 1
-               , zlib                   >= 0.5  && < 1 
+  build-depends:  base                   >= 4    && < 5
+                , filepath               >= 1    && < 2
+                , directory
+                , Holumbus-Searchengine  >= 1.2
+                , binary                 >= 0.5  && < 1
+                , deepseq
+                , xmlhtml                == 0.1.*
+                , text
 
-  if impl( ghc < 7.4 )
-    build-depends:
-                 containers             >= 0.2 && < 0.4.2
-               , deepseq                >= 1.1 && < 1.2
-  else
-    build-depends:
-                 containers             >= 0.4.2
-               , deepseq                >= 1.2
-
-  ghc-options: -threaded
-               -rtsopts
-               -Wall
-               -fwarn-tabs
-               -funbox-strict-fields
-               -fno-warn-unused-do-bind
-               
-
-
--- ------------------------------------------------------------
+  ghc-options:  -threaded
+                -rtsopts
+                -Wall
+                -fwarn-tabs
+                -funbox-strict-fields
 
 executable curryServer
-  main-is: Main.hs
-
+  main-is:        Main.hs
   hs-source-dirs: src
+  other-modules:  CurryInfo, FilesAndLoading, Helpers, IndexTypes
+                , CoreData, CurryState, CurrySearch, Parser, Application, Site
 
-  build-depends: ghc                        >= 7
-               , base                       >= 4     && < 5
-               , binary                     >= 0.5
-               , bytestring                 >= 0.9.1 && < 0.10
-               , directory
-               , filepath                   == 1.2.0.*
-               , heist                      >= 0.5   && < 0.6
-               , Holumbus-Searchengine      >= 1.2
-               , hxt                        >= 9.1
-               , hxt-charproperties         >= 9
-               , hxt-regex-xmlschema        >= 9
-               , hxt-unicode                >= 9
-               , json                       >= 0.4   && < 1
-               , MonadCatchIO-transformers  >= 0.2.1 && < 0.3
-               , mtl                        >= 2     && < 3
-               , network                    >= 2.3
-               , snap                       >= 0.4   && < 0.6
-               , snap-core                  >= 0.4   && < 0.6
-               , snap-server                >= 0.4   && < 0.6
-               , text                       >= 0.11  && < 0.12
-               , time                       >= 1.1   && < 1.3
-               , xhtml-combinators          == 0.2.*
-               , xmlhtml                    == 0.1.*
+  build-depends: base                   >= 4     && < 5
+               , xmlhtml                == 0.1.*
+               , heist                  >= 0.5   && < 0.6
+               , json                   >= 0.4   && < 1
+               , snap-core              >= 0.4   && < 0.6
+               , snap                   >= 0.4   && < 0.6
+               , Holumbus-Searchengine  >= 1.2
+               , text
+               , mtl
+               , binary                 >= 0.5
+               , deepseq
+               , parsec
+               , containers
 
-  if impl( ghc < 7.4 )
-    build-depends:
-                 containers                 >= 0.2 && < 0.4.2
-               , deepseq                    >= 1.1 && < 1.2
-  else
-    build-depends:
-                 containers                 >= 0.4.2
-               , deepseq                    >= 1.2
-
-  extensions:    TypeSynonymInstances MultiParamTypeClasses
+  extensions:  TypeSynonymInstances MultiParamTypeClasses FlexibleInstances
 
   ghc-options: -threaded
                -O2
                -Wall
                -fwarn-tabs
                -funbox-strict-fields
-               -fno-warn-unused-do-bind
-               
--- ------------------------------------------------------------
