--- a/Currygle.cabal
+++ b/Currygle.cabal
@@ -37,7 +37,7 @@ executable curryServer
   main-is:        Main.hs
   hs-source-dirs: src
   other-modules:  CurryInfo, FilesAndLoading, Helpers, IndexTypes
-                , CoreData, CurryState, CurrySearch, Parser, Application, Site
+                , CurryState, CurrySearch, Parser, Application, Site
 
   build-depends:  base                   >= 4     && < 5
                 , xmlhtml                == 0.1.*
