--- a/Currygle.cabal
+++ b/Currygle.cabal
@@ -17,8 +17,8 @@ executable curryIndexer
   hs-source-dirs: src
   other-modules:  CurryInfo, FilesAndLoading, Helpers, IndexTypes
 
-  build-depends:  base                   >= 4    && < 5
-                , filepath               >= 1    && < 2
+  build-depends:  base                   == 4.*
+                , filepath               == 1.*
                 , directory
                 , Holumbus-Searchengine  >= 1.2.3
                 , binary                 >= 0.5  && < 1
@@ -39,12 +39,12 @@ executable curryServer
   other-modules:  CurryInfo, FilesAndLoading, Helpers, IndexTypes
                 , CurrySearch, QueryParser, Application, Site
 
-  build-depends:  base                   >= 4     && < 5
+  build-depends:  base                   == 4.*
                 , xmlhtml                == 0.1.*
-                , heist                  >= 0.5   && < 0.6
+                , heist                  == 0.6.*
                 , json                   >= 0.4   && < 1
-                , snap-core              >= 0.4   && < 0.6
-                , snap                   >= 0.4   && < 0.6
+                , snap-core              == 0.6.*
+                , snap                   == 0.6.*
                 , Holumbus-Searchengine  >= 1.2.3
                 , text
                 , mtl
@@ -54,6 +54,8 @@ executable curryServer
                 , containers
                 , transformers
                 , unix
+                , cryptocipher           <  0.4
+                , cprng-aes              <  0.3
 
   extensions:   TypeSynonymInstances MultiParamTypeClasses FlexibleInstances
 
