Use splitOn from split package

--- a/Currygle.cabal
+++ b/Currygle.cabal
@@ -25,6 +25,7 @@ executable curryIndexer
                 , deepseq
                 , text
                 , transformers
+                , split
 
   ghc-options:  -threaded
                 -rtsopts
