--- a/Currygle.cabal
+++ b/Currygle.cabal
@@ -40,6 +40,9 @@ executable curryServer
                 , CurrySearch, QueryParser, Application, Site
 
   build-depends:  base                   == 4.*
+                , bytestring             >= 0.9.1 && < 0.10
+                , MonadCatchIO-transformers >= 0.2.1 && < 0.3
+                , mtl                    == 2.*
                 , xmlhtml                == 0.1.*
                 , heist                  == 0.6.*
                 , json                   >= 0.4   && < 1
