--- a/Currygle.cabal
+++ b/Currygle.cabal
@@ -45,8 +45,9 @@ executable curryServer
                 , xmlhtml                == 0.1.*
                 , heist                  == 0.8.*
                 , json                   >= 0.4   && < 1
-                , snap-core              == 0.8.*
-                , snap                   == 0.8.*
+                , snap-core              == 0.9.*
+                , snap                   == 0.9.*
+                , snap-loader-static     == 0.9.*
                 , Holumbus-Searchengine  >= 1.2.3
                 , text
                 , mtl
@@ -56,8 +57,6 @@ executable curryServer
                 , containers
                 , transformers
                 , unix
-                , cryptocipher           <  0.4
-                , cprng-aes              <  0.3
 
   extensions:   TypeSynonymInstances MultiParamTypeClasses FlexibleInstances
 
