--- a/Currygle.cabal
+++ b/Currygle.cabal
@@ -6,11 +6,15 @@ author:        Sandra Dylus
 stability:     experimental
 category:      Text, Data
 synopsis:      Curr(y)gle
-homepage:      tba
+-- homepage:
 description:   Curr(y)gle - An API search engine for Curry
 cabal-version: >= 1.6
 build-type:    Simple
-tested-with:   GHC == 7.0.4
+tested-with:   GHC == 7.6.2
+
+Flag old-base
+  default: False
+  manual: False
 
 executable curryIndexer
   main-is:        CurryIndexer.hs
@@ -28,7 +32,7 @@ executable curryIndexer
                 , split
 
   ghc-options:  -threaded
-                -rtsopts
+                -O2
                 -Wall
                 -fwarn-tabs
                 -funbox-strict-fields
@@ -39,18 +43,16 @@ executable curryServer
   other-modules:  CurryInfo, FilesAndLoading, Helpers, IndexTypes
                 , CurrySearch, QueryParser, Application, Site
 
-  build-depends:  base                   == 4.*
-                , bytestring
+  build-depends:  bytestring
                 , mtl                    == 2.*
-                , xmlhtml                == 0.1.*
-                , heist                  == 0.8.*
-                , json                   >= 0.4   && < 1
+                , xmlhtml                >= 0.1
+                , heist                  == 0.11.*
+                , json                   >= 0.4    && < 1
                 , snap-core              == 0.9.*
-                , snap                   == 0.9.*
+                , snap                   == 0.11.*
                 , snap-loader-static     == 0.9.*
                 , Holumbus-Searchengine  >= 1.2.3
                 , text
-                , mtl
                 , binary                 >= 0.5
                 , deepseq
                 , parsec
@@ -58,7 +60,14 @@ executable curryServer
                 , transformers
                 , unix
 
-  extensions:   TypeSynonymInstances MultiParamTypeClasses FlexibleInstances
+  if flag(old-base)
+    build-depends:
+      base                      >= 4        && < 4.4,
+      lens                      >= 3.7.6    && < 3.8
+  else
+    build-depends:
+      base                      >= 4.4      && < 5,
+      lens                      >= 3.7.6    && < 3.9
 
   ghc-options:  -threaded
                 -O2
