Added constraint on hashable to avoid segfaulting
For details, see: https://github.com/tibbe/hashable/issues/60

--- a/Currygle.cabal
+++ b/Currygle.cabal
@@ -59,6 +59,7 @@ executable curryServer
                 , containers
                 , transformers
                 , unix
+                , hashable               <  1.2
 
   if flag(old-base)
     build-depends:
